chore: add Endpoint Extensions
